# calibrated_franka_description

./: CMakeLists.txt  package.xml
robots/: dual_panda_example.urdf.xacro  hand.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro
