<?xml version="1.0"?>
<package format="2">
  <name>calibrated_franka_description</name>
  <version>0.7.0</version>
  <description>calibrated_franka_description contains URDF files and meshes of Franka Emika robots</description>
  <maintainer email="support@franka.de">Franka Emika GmbH</maintainer>
  <license>Apache 2.0</license>

  <author>Franka Emika GmbH</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
</package>
